# xnatutils

./: .gitignore  .project  AUTHORS  LICENSE  README.md  README.rst  conftest.py  daris2xnat.py  pyproject.toml  requirements.txt  setup.py  xnat-import.sh  xnatpy-basics.ipynb  xnatutils.py
.github/workflows/: ci-cd.yml
admin/: import_from_daris.py
doc/: xget_manual.html  xget_manual.org
scripts/: check_imported.py  copy_nifti_from_daris.py  daris2xnat.py  import_from_daris.py  put_test.py  strip_syngo_dicoms.py  test_dicom.py  xnat-get  xnat-ls  xnat-put  xnat-rename  xnat-varget  xnat-varput
scripts/_resources/: mbi-to-daris-number.py  mbi_to_daris_number.py
test/: .gitignore  conftest.py  francesco_mwe.py  misc.py  test_connect.py  test_get.py  test_ls.py  test_put.py
test/data/: clia6071-20200709_125713.xml  noBIDS0020.xml  tclose-20200727_155819.xml
test/unittest/: test_connect.py  test_get.py
xnat_utils/xget/: Args.py  Config.py  Exceptions.py  Main.py  MockSetup.py  ProjectUtils.py  SessionUtils.py  Sessions.py  TranslateLabelID.py  Utils.py  XnatPass.py  args.py  config.py  exceptions.py  main.py  mock_setup.py  project_utils.py  session_utils.py  sessions.py
xnatutils/: __init__.py  base.py  exceptions.py  get.py  get_.py  ls.py  ls_.py  misc.py  put.py  put_.py  rename.py  rename_.py  varget_.py  varput.py  varput_.py
xnatutils/tests/: test_get.py  test_ls.py  test_put.py
