[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "xnatutils"
description = "A collection of scripts for downloading/uploading and listing data from XNAT repositories."
readme = "README.rst"
requires-python = ">=3.8"
dependencies = ["xnat>=0.6", "progressbar2>=3.16.0", "future>=0.16"]
license = { file = "LICENSE" }
authors = [{ name = "Thomas G. Close", email = "tom.g.close@gmail.com" }]
maintainers = [{ name = "Thomas G. Close", email = "tom.g.close@gmail.com" }]
keywords = ["XNAT", "REST API", "DICOM", "uploader"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Healthcare Industry",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Natural Language :: English",
    "Programming Language :: Python :: 3.4",
    "Programming Language :: Python :: 3.5",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
]
dynamic = ["version"]

# [project.optional-dependencies]
# dev = [
#     "black",
#     "pre-commit",
#     "codespell",
#     "flake8",
#     "flake8-pyproject",
#     "xnatutils[test]",
#     "pydata-sphinx-theme >=0.13",
# ]
# test = [
#     "pytest >=6.2.5",
#     "pytest-env>=0.6.2",
#     "pytest-cov>=2.12.1",
#     "pydra >=0.23.0a0",
# ]
# docs = [
# ]

[project.urls]
repository = "https://github.com/Australian-Imaging-Service/xnatutils"


[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "xnatutils/_version.py"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build]
packages = ["xnatutils"]
exclude = ["tests"]
include = ["./xnatutils"]

[project.scripts]
xnat-get = "xnatutils.get_:cmd"
xnat-put = "xnatutils.put_:cmd"
xnat-ls = "xnatutils.ls_:cmd"
xnat-varget = "xnatutils.varget_:cmd"
xnat-varput = "xnatutils.varput_:cmd"
xnat-rename = "xnatutils.rename_:cmd"

[tool.black]
target-version = ['py38']
exclude = "xnatutils/core/_version.py"
# [tool.mypy]
# python_version = "3.8"
# ignore_missing_imports = true
# strict = true
# namespace_packages = true
# explicit_package_bases = true
# exclude = ["tests", "scripts", "docs", "build", "dist", "xnatutils/_version.py"]


[tool.codespell]
ignore-words = ".codespell-ignorewords"

[tool.flake8]
doctests = true
per-file-ignores = ["__init__.py:F401"]
max-line-length = 88
select = "C,E,F,W,B,B950"
extend-ignore = ['E203', 'E501', 'E129', 'W503', 'E704']
